[package]
name = "dpm"
version = "0.1.0-alpha"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json =  "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
console = { version = ">=0.9.1, <1.0.0", default-features = false }